--- a/src/styles/components/canvas.css
+++ b/src/styles/components/canvas.css
@@ -37,6 +37,12 @@
   height: 100%;
 }
 
+.hero-canvas-static svg {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
 .work-canvas {
   width: 100%;
   height: 60vh;
